# bee

./: .gitignore  Cargo.toml  Readme  Readme.md  config.yml  go.mod  main.go  readme  store.yml
.github/workflows/: bench.yml  test.yml  tests.yml
conn/: conn.go
proto/: raftproto.proto
src/: config.rs  lib.rs  main.rs  raft.rs  storage.rs
src/raft/: conn.rs  consensus.rs  raft.rs  rpc.rs  sm.rs  state.rs  util.rs
src/storage/: kv.rs  serde.rs  store.rs
src/utils/: helpers.rs
tests/: config.yml
