[package]
name = "bee"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
rmp = "0.8.14"
rmp-serde = "1.3.0"
rand = "0.8.5"
yaml-rust2 = "0.9.0"
clap = { version = "4.5.18", features = ["derive"] }
log = "0.4.22"

# RPC's
anyhow = "1.0"
futures = "0.3"
tarpc = { version = "0.31", features = ["tokio1"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
